Fixed gap in page style.

--- a/genpass/style/main.css
+++ b/genpass/style/main.css
@@ -50,7 +50,7 @@ html, html * {
 body {
     z-index: 0;
     max-width: 24em;
-    margin: 2.5em auto 0 auto;
+    margin: 2.5rem auto 0 auto;
     border-radius: 0.5em;
     border-top-left-radius: 0;
     border-top-right-radius: 0;
@@ -77,12 +77,14 @@ body, #menu {
     left: 0;
     box-shadow: 0 0 0.5em var(--shadow);
     width: 100%;
+    height: 2.5rem;
     z-index: 20;
 }
 
 #header > h1 {
     text-align: center;
     font-weight: bold;
+    line-height: 1.25em;
 }
 
 #footer {
